force-app/main/default/objects/Owner_Details__c/Owner_Details__c.object-meta.xml
<CustomObject>
    <label>Owner Details</label>
    <nameField>
        <label>Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>