force-app/main/default/objects/Owner_Details__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Owner Details</relationshipLabel>
    <relationshipName>Owner_Details</relationshipName>
    <type>Lookup</type>
</CustomField>