force-app/main/default/objects/Owner_Details__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <label>Mobile No</label>
    <type>Phone</type>
</CustomField>